--- a/todos_api/views/index.html
+++ b/todos_api/views/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <title>Document</title>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <title>ToDo App</title>
   </head>
   <body>
-    <h1>THIS IS THE INDEX PAGE</h1>
-    <p>todos will go here</p>
+    <header>
+      <h1>todo<span>list</span></h1>
+      <h2>A simple todo list app built with node</h2>
+    </header>
+
+    <section class="form">
+      <input type="text" id="todoInput" placeholder="Insert your task here..." />
+    </section>
+
+    <ul class="list"></ul>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
